_cards.scss: fix double border for inventory-grid-card's modal-card

--- a/src/assets/scss/_cards.scss
+++ b/src/assets/scss/_cards.scss
@@ -39,7 +39,10 @@
       @extend %base-card-backdrop-blur;
 
       background-color: var(--theme-color-background-card-semi-transparent);
+      border-bottom: 0;
       border-bottom-left-radius: 0;
+      border-right: 0;
+      border-top: 0;
       border-top-left-radius: 0;
       bottom: 0;
       padding: $card-padding;
@@ -149,9 +152,9 @@
 
     .footer {
       border-top: 1px solid var(--theme-color-border);
-      padding-top: 18px;
       display: flex;
       gap: 12px;
+      padding-top: 18px;
 
       > * {
         flex-grow: 1;
